tests/negative/generics/const_fn_mismatch_ret.orng
fn template(const n: Int) -> Int {
    n + 4
}

fn main() -> Char {
    template(4)
}
